# CannaOmics-ai

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
cannaomics/: __init__.py  cli.py  demo.py
cannaomics/chemistry/: __init__.py  chemotype.py  normalize_compounds.py  targets.py
cannaomics/config/: __init__.py  defaults.yaml  schema.py
cannaomics/features/: __init__.py  build_features.py  feature_store.py  gene_features.py
cannaomics/genomics/: __init__.py  annotation.py  genes.py  variants.py
cannaomics/interpretability/: __init__.py  candidate_ranking.py  feature_importance.py  plots.py  shap_analysis.py
cannaomics/models/: __init__.py  baseline.py  evaluate.py  model_registry.py  predict.py  train.py
cannaomics/reports/: __init__.py  generator.py  templates.py
cannaomics/utils/: __init__.py  checksums.py  logging.py  paths.py  reproducibility.py
configs/: demo.yaml
data/: README.md
examples/: mini_chemical_profile.csv  mini_variant_matrix.csv
tests/: __init__.py  conftest.py  test_chemistry.py  test_genomics.py  test_pipeline.py
