[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cannaomics"]

# ──────────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────────
[project]
name = "cannaomics"
version = "0.1.0"
description = "Open-source framework for reproducible Cannabis sativa genotype-to-chemotype analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Sylvian Caramaschi" }]
keywords = [
    "cannabis",
    "bioinformatics",
    "chemotype",
    "terpenes",
    "cannabinoids",
    "machine-learning",
    "genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# ── Core dependencies ────────────────────────────────────────────────
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "biopython>=1.83",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.65",
]

# ── Optional dependency groups ───────────────────────────────────────
[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.43",
    "scipy>=1.11",
    "statsmodels>=0.14",
]
plotting = [
    "plotly>=5.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
bio = [
    "pysam>=0.22",
    "pyfaidx>=0.8",
    "gffutils>=0.13",
    "scikit-allel>=1.3",
]
all = ["cannaomics[ml,plotting,bio]"]

# ── CLI entry point ──────────────────────────────────────────────────
[project.scripts]
cannaomics = "cannaomics.cli:app"

# ── Project URLs ─────────────────────────────────────────────────────
[project.urls]
Homepage = "https://github.com/caramaschiHG/CannaOmics-ai"
Documentation = "https://github.com/caramaschiHG/CannaOmics-ai/tree/main/docs"
Repository = "https://github.com/caramaschiHG/CannaOmics-ai"
Issues = "https://github.com/caramaschiHG/CannaOmics-ai/issues"
Changelog = "https://github.com/caramaschiHG/CannaOmics-ai/blob/main/CHANGELOG.md"

# ──────────────────────────────────────────────────────────────────────
# Dependency groups (PEP 735)
# ──────────────────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
notebooks = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
]

# ──────────────────────────────────────────────────────────────────────
# Ruff – linting & formatting
# ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["cannaomics"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]
"notebooks/**/*.py" = ["E402", "T201", "D"]

# ──────────────────────────────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ──────────────────────────────────────────────────────────────────────
# Mypy
# ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
